@@ -1,3 +1,10 @@
+2001-10-12  Bradford Hovinen  <hovinen@ximian.com>
+
+	* applier.c (render_to_screen): Use standard gdk and gdk_pixbuf
+	rather than xlib and gdk_pixbuf_xlib
+	(make_root_pixmap): Create a GdkPixmap
+	(set_root_pixmap): Accept GdkPixmap and convert to X id
+
 2001-09-28  Bradford Hovinen  <hovinen@ximian.com>
 
 	* preferences.c (preferences_load_from_bonobo_db):
